// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotPlayingButton when not playing renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Not Playing"
>
  <pure(HighlightOffTwoToneIcon)
    className="test"
    color="primary"
  />
</WithStyles(IconButton)>
`;

exports[`NotPlayingButton when playing renders as expected 1`] = `
<WithStyles(IconButton)
  aria-label="Not Playing"
>
  <pure(HighlightOffIcon)
    className="test"
  />
</WithStyles(IconButton)>
`;
